--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,26 +12,23 @@ env:
   DockerImageName: todoapp
 
 jobs:
+  ## 1) Checkout + артефакти
   checkout:
     runs-on: ubuntu-latest
-    outputs:
-      repo-artifact: repo
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Upload repo as artifact
+      - name: Upload full repo
         uses: actions/upload-artifact@v4
         with:
           name: repo
           path: .
 
+  ## 2) Python CI
   python-ci:
     needs: checkout
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./src
     steps:
       - name: Download repo
         uses: actions/download-artifact@v4
@@ -48,20 +45,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install coverage flake8
-          pip install -r requirements.txt
+          pip install -r src/requirements.txt
 
       - name: Run tests
-        run: python manage.py test
+        run: python src/manage.py test
 
       - name: Generate coverage report
         run: |
-          coverage run --source='.' manage.py test
+          coverage run --source='.' src/manage.py test
           coverage report
 
       - name: Lint & complexity check
         run: |
-          flake8 . --show-source --statistics --exit-zero --max-complexity=6
+          flake8 src --show-source --statistics --exit-zero --max-complexity=6
 
+  ## 3) Docker CI (тільки main)
   docker-ci:
     if: github.ref_name == 'main'
     needs: checkout
@@ -79,7 +77,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build & push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -87,6 +85,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DockerImageName }}:${{ github.sha }}
 
+  ## 4) Helm CI (тільки main)
   helm-ci:
     if: github.ref_name == 'main'
     needs: checkout
